Add new up/downhill find code

--- a/SekoRenderer/SekoRenderer.csproj
+++ b/SekoRenderer/SekoRenderer.csproj
@@ -14,6 +14,9 @@
       <None Update="bass.dll">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="bassflac.dll">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
